2003-02-14  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Build a jar file named hello.jar
	for use in test that loads class file out of
	a jar. Also copy new directory to dist file.
	* src/tcljava/tcl/lang/TclClassLoader.java
	(getClassFromPath): Use '/' character instead of
	File.separatorChar as the separator when constructing
	a class file name to be searched for in the .jar
	file. A jar file always uses '/' as the separator.
	* src/tests/tcljava/hello/SayHello.java: Add test
	source code.
	* tests/tcljava/JavaCallCmd.test: Add test
	case that loads a class file out of a jar
	on the TCL_CLASSPATH.
	[Bug 225612]

2003-02-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/IfCmd.java (cmdProc):
	Add additional info to errorInfo to match
	Tcl 8.3 implementation.
	* tests/tcl/expr.test:
	* tests/tcl/if.test: Update test cases to
	match Jacl implementation.

2003-02-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/tcl/incr-old.test:
	* tests/tcl/incr.test: Update incr test cases
	to match Jacl implementation. Add tests cases
	from Tcl 8.4 impl.

2003-02-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* tests/interp.test: Don't include load command
	in list of hidden commands for Jacl.
	* tests/set-old.test: Run test cases that depend
	on hash order through lsort so that the tests
	pass under Jacl.

2003-02-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/Parser.java (eval2): When
	invoking logCommandInfo while processing a
	nested command, check for a close bracket
	terminator in addition to a normal end of
	command terminator. This allows a regression
	test that was failing to pass.

2003-02-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ParseAdaptor.java (parseNestedCmd):
	Raise missing close-bracket exception for easy error case.
	* src/jacl/tcl/lang/Parser.java (parseCommand):
	Raise "missing close-bracket" exception when parser
	finds a nested command that is not terminated by